--- a/enterprise_application-web/pom.xml
+++ b/enterprise_application-web/pom.xml
@@ -52,6 +52,7 @@
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
+                    <showDeprecation>true</showDeprecation>
                 </configuration>
             </plugin>
             <plugin>
